--- a/veterinaria/menu/templates/menu/HTML/Inicio.html
+++ b/veterinaria/menu/templates/menu/HTML/Inicio.html
@@ -1,63 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{{import Plantilla.html}}
+
     {% load static %}
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block titulo %}     
     <title>INICIO</title>
+    {% endblock titulo %}
 
-    <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
-    <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+    {% block estilos %}
     <link rel="stylesheet" href="{% static 'menu/css/estiloINICIO.css' %}">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    {% endblock estilos %}
     
     
-</head>
-<header>
-  <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
-              </li>
-            
-            
 
-
-
-               
-            </ul>
-            
-          </div>
-        </div>
-      </nav>
       
+      {% block cuerpo %}
+    
 
+
+      
 <section class="hero-image">
 <div class="carousuel">
  <div class="carousel__item pic__one">
@@ -93,9 +53,6 @@
 </section>
 <script src="{% static 'menu/JAVA/java.js' %}"></script>
 <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
-</body>
-  
 
-      
-      
-</html>
+
+{% endblock cuerpo %}
