--- a/veterinaria/menu/templates/menu/HTML/Login.html
+++ b/veterinaria/menu/templates/menu/HTML/Login.html
@@ -8,13 +8,17 @@
   <title>Inicia Sesión</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
+        <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+
   <link rel="stylesheet" href="{% static 'menu/css/login.css' %}">
 
 
 </head>
 
 <body class="cuerpo">
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
     crossorigin="anonymous"></script>
