--- a/veterinaria/menu/templates/menu/HTML/Nosotros.html
+++ b/veterinaria/menu/templates/menu/HTML/Nosotros.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link type="text/css" rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/estilosNOSOTROS.css">
-    <link type="text/css" rel="stylesheet" href="../css/ESTILO2.css">
+    <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+    
+    <link rel="stylesheet" href="{% static 'menu/css/estilosNOSOTROS.css' %}">
+   
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -16,39 +18,36 @@
 </head>
 
 <body>
-    <header>
+    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
             crossorigin="anonymous"></script>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="circulo" href="Inicio.html"><IMG src="../img/LOGO.png" class="imagen"></IMG></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Inicio.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#Nosotros">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Login.html">Iniciar Sesión</a>
-                        </li>
-
+                <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
+              </li>
 
                 </div>
 
@@ -67,12 +66,12 @@
                 <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
                     style="stroke: none; fill: #ffffff;"></path>
             </svg></div>
-    </header>
+    
     <main>
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestra Trayectoria</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="../img/undraw_dog_c7i6.svg" alt="" class="imagen-about-us">
+                <img src="{% static 'menu/img/undraw_dog_c7i6.svg' %}" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
                     <h3><span>1</span>Vet Juanita</h3>
                     <p>Se lanza al mercado el año 2021, trabajando en pro del bienestar de cada mascota.
@@ -97,14 +96,14 @@
             <h2 class="titulo">¿Que opinan nuestros clientes?</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="../img/gato3.png" alt="">
+                    <img src="{% static 'menu/img/gato3.png' %}" alt="">
                     <div class="contenido-texto-card">
                         <h4>Pansito</h4>
                         <p>¡Me ayudaron con mis medicamentos, muchas gracias!</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../img/Perro3.jpg" alt="">
+                    <img src="{% static 'menu/img/Perro3.jpg' %}" alt="">
                     <div class="contenido-texto-card">
                         <h4>Jack</h4>
                         <p>Tuve un accidente con un vehículo, pero gracias a mi tratamiento, puedo volver a jugar con mi
@@ -118,26 +117,26 @@
                 <h2 class="titulo">Algunos de nuestros servicios</h2>
                 <div class="servicio-cont">
                     <div class="servicio-ind">
-                        <img src="img/ilustracion1.svg" alt="">
+                        <img src="{% static 'menu/img/ilustracion1.svg' %}" alt="">
                         <h3>Cirugías</h3>
                         <p>Contamos con múltiples pabellones equipados con tecnologías actualizadas de monitoreo y
                             anestesia.</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="img/ilustracion4.svg" alt="">
+                        <img src="{% static 'menu/img/ilustracion4.svg' %}" alt="">
                         <h3>Consultas</h3>
                         <p>Nuestro objetivo es la búsqueda de un diagnóstico preciso y más adecuado tratamiento para
                             cada caso.</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="img/ilustracion3.svg" alt="">
+                        <img src="{% static 'menu/img/ilustracion3.svg' %}" alt="">
                         <h3>Exámenes</h3>
                         <p>Para mejorar nuestro diagnóstico utilizaremos Radiologías, Ecografías, Endoscopías y
                             Ecocardiografías</p>
                     </div>
 
                 </div>
-                <center> <a href="../HTML/Servicios.html"><button class="custom-btn btn-3"> <span>Nuestros
+                <center> <a href="{% url 'Servicios.html' %}"><button class="custom-btn btn-3"> <span>Nuestros
                                 servicios</span></button></a></center>
             </div>
         </section>
@@ -171,7 +170,7 @@
         <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
     </footer>
 
-    <script src="JAVA/flow.js"></script>
+    <script src="{% static 'menu/JAVA/flow.js' %}"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 </body>
