--- a/veterinaria/menu/templates/menu/HTML/OlvidoContra.html
+++ b/veterinaria/menu/templates/menu/HTML/OlvidoContra.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +8,45 @@
     <title>¿Olvidaste tu contraseña?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/login.css">
+        <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
+        <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+
+    <link rel="stylesheet" href="{% static 'menu/css/login.css' %}">
+
 </head>
 
 <body>
 
-    <body class="cuerpo">
+    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
             crossorigin="anonymous"></script>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="circulo" href="Inicio.html"><IMG src="../img/LOGO.png" class="imagen"></IMG></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Inicio.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#Login">Iniciar Sesión</a>
-                        </li>
-
+                <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
+              </li>
                 </div>
             </div>
         </nav>
@@ -76,7 +76,7 @@
                     <input type="email" placeholder="Correo electrónico"  id="correoOlvida" id="correoOlvida"/>
                     <input type="password" placeholder=" Ingresa tu nueva contraseña" id="contraOlvida" />
                     <input type="password" placeholder=" Ingresa nuevamente la contraseña" id="contraNueva"/>
-                    <a href="../HTML/Login.html">Volver a inicio de sesión</a>
+                    <a href="{% url 'Login.html' %}">Volver a inicio de sesión</a>
                     <button type="submit" onclick="return enviaformolvida();" values="enviar">Restablecer Contraseña</button>
                     <div id="errorOlvida"></div>
                 </form>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="overlay-panel overlay-right">
 
-                        <img class="Gatito" src="../img/GatoInterrogaivo.png" alt="">
+                        <img class="Gatito" src="{% static 'menu/img/GatoInterrogaivo.png' %}" alt="">
 
 
 
@@ -99,8 +99,8 @@
             </div>
         </div>
         <h2 class="titulo-final">&copy; Veterinaria Juanita</h2>
-        <script src="JAVA/javaFormulario.js"></script>
-        <script src="JAVA/OlvidoContra.js"></script>
+        <script src="{% static 'menu/JAVA/javaFormulario.js' %}"></script>
+        <script src="{% static 'menu/JAVA/OlvidoContra.js' %}"></script>
         
         
     </body>
