--- a/veterinaria/menu/templates/menu/HTML/Servicios.html
+++ b/veterinaria/menu/templates/menu/HTML/Servicios.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  {% load static %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicios</title>
-  <link type="text/css" rel="stylesheet" href="../../css/estilo.css">
-  <link rel="stylesheet" href="../css/estilo.css">
-  <link rel="stylesheet" href="../css/SER.css">
-  <link rel="stylesheet" href="../css/ESTILO2.css">
+  <link rel="stylesheet" href="{% static 'menu/css/estilo.css' %}">
+  <link rel="stylesheet" href="{% static 'menu/css/ESTILO2.css' %}">
+  
+  <link rel="stylesheet" href="{% static 'menu/css/SER.css' %}">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
-  <header>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
       crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="circulo" href="Inicio.html"><IMG src="../img/LOGO.png" class="imagen"></IMG></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="Inicio.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="AgendaOnline.html">Agenda Online</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Servicios">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Login.html">Iniciar Sesión</a>
-            </li>
-
+        <a class="circulo" href="{% url 'Inicio.html' %}"><IMG src="{% static 'menu/img/LOGO.png' %}" class="imagen"></IMG></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                     <a class="nav-link" href="{% url 'Inicio.html' %}">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'AgendaOnline.html' %}">Agenda Online</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Contacto.html' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Nosotros.html' %}">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Servicios.html' %}">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'Login.html' %}">Iniciar Sesión</a>
+              </li>
         </div>
 
 
@@ -65,32 +64,32 @@
         <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
           style="stroke: none; fill: #fff;"></path>
       </svg></div>
-  </header>
+ 
 
   <section class="portafolio">
     <div class="contenedor">
       <h2 class="titulo">CONOCE LOS SERVICIOS QUE TENEMOS PARA TI</h2>
       <div class="galeria-port">
         <div class="imagen-port">
-          <img src="../img/acercamiento-al-medico-veterinario-cuidando-mascota_23-2149267934.avif" alt="">
+          <img src="{% static 'menu/img/acercamiento-al-medico-veterinario-cuidando-mascota_23-2149267934.avif' %}" alt="">
           <div class="hover-galeria">
-            <img src="img/icono1.png" alt="">
+            <img src="{% static 'menu/img/icono1.png' %}" alt="">
             <h3 class="titulo2">Consultas</h3>
             <p>Nuestro objetivo es la búsqueda de un diagnóstico preciso y adecuado para cada paciente.</p>
           </div>
         </div>
         <div class="imagen-port">
-          <img src="../img/images.jpg" alt="">
+          <img src="{% static 'menu/img/images.jpg' %}" alt="">
           <div class="hover-galeria">
-            <img src="img/icono1.png" alt="">
+            <img src="{% static 'menu/img/icono1.png' %}" alt="">
             <h3 class="titulo2">Cirugias</h3>
             <p>Contamos con múltiples pabellones, equipados con las mejores tecnologías de monitoreo y anestesia.</p>
           </div>
         </div>
         <div class="imagen-port">
-          <img src="../img/interconsultas.jpg" alt="">
+          <img src="{% static 'menu/img/interconsultas.jpg' %}" alt="">
           <div class="hover-galeria">
-            <img src="img/icono1.png" alt="">
+            <img src="{% static 'menu/img/icono1.png' %}" alt="">
             <h3 class="titulo2">Interconsultas</h3>
             <p>Cardiología, Dermatología, Oftalmología, Odontología, lo que necesite tu mascota!
 
@@ -98,9 +97,9 @@
           </div>
         </div>
         <div class="imagen-port">
-          <img src="../img/examenes.webp" alt="">
+          <img src="{% static 'menu/img/examenes.webp' %}" alt="">
           <div class="hover-galeria">
-            <img src="img/icono1.png" alt="">
+            <img src="{% static 'menu/img/icono1.png' %}" alt="">
             <h3 class="titulo2">Exámenes</h3>
             <p>Para llegar a un diagnóstico más preciso realizaremos diferentes exámenes</p>
           </div>
@@ -163,7 +162,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="../HTML/AgendaOnline.html"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline.html' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
@@ -193,7 +192,7 @@
       </table>
       </div>
     </center>
-    <center> <a href="../HTML/AgendaOnline.html"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline.html' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
@@ -223,10 +222,12 @@
       </table>
       </div>
     </center>
-    <center> <a href="../HTML/AgendaOnline.html"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
+    <center> <a href="{% url 'AgendaOnline.html' %}"><button class="custom-btn btn-3"> <span>Agenda Aqui</span></button></a>
     </center>
   </section>
   </main>
+
+  
   <footer>
     <div class="contenedor-footer">
       <div class="content-foo">
